--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -4,6 +4,17 @@
 @import url('https://fonts.googleapis.com/css2?family=Tangerine:wght@400;700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Prata&display=swap');
 
+@font-face {
+  font-family: 'Moontime';
+  src: url('/fonts/Moontime-Regular.otf') format('opentype'),
+    url('/fonts/Moontime-Regular.ttf') format('truetype');
+  font-weight: normal;
+  font-style: normal;
+}
+
+.moontime-text {
+  font-family: 'Moontime', cursive;
+}
 /* Custom animations */
 @keyframes spin-slow {
   from {
