case sensitive fonts file fixed

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -6,8 +6,8 @@
 
 @font-face {
   font-family: 'Moontime';
-  src: url('/fonts/Moontime-Regular.otf') format('opentype'),
-    url('/fonts/Moontime-Regular.ttf') format('truetype');
+  src: url('/fonts/MoonTime-Regular.otf') format('opentype'),
+    url('/fonts/MoonTime-Regular.ttf') format('truetype');
   font-weight: normal;
   font-style: normal;
 }
